Mar02-dev01-OAuth-google-setup-with-prisma-setupin-FE

--- a/clients/user-ui/.env
+++ b/clients/user-ui/.env
@@ -1,1 +1,4 @@
 NEXT_PUBLIC_SERVER_URI="http://localhost:4001/graphql"
+DATABASE_URL="mongodb+srv://admin:1234@cluster0.asua0j7.mongodb.net/test"
+GOOGLE_CLIENT_ID="592883658122-nutbumen26230uukmu8al59abmc44cr7.apps.googleusercontent.com"
+GOOLE_CLIENT_SECRET="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"
